# DebtWarnSys

./: .gitignore  Makefile  README.md  conftest.py  manage.py  mydb.py  pyproject.toml  pytest.ini  setenv.sh
core/: settings.py
dws/: asgi.py  settings.py  urls.py  wsgi.py
webpage/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
webpage/helper/: auth.py  fetcher.py
webpage/migrations/: 0001_initial.py  0002_alter_debt_due_date.py  0003_debt_value_alter_address_details.py  0004_alter_company_address_alter_debtor_address_and_more.py  0005_company_phone_debt_last_contact_debt_times_contacted_and_more.py  0006_alter_debt_last_contact.py
webpage/templates/: add_company.html  add_company_user.html  add_debt.html  add_debtor.html  add_employee.html  all_company_users.html  all_debtors.html  all_employees.html  base.html  company.html  company_user.html  debt.html  debtor.html  debtor_home.html  debts_report.html  employee.html  error.html  home.html  login.html  my_debts.html  navbar.html  register.html  update_company.html  update_company_user.html  update_debt.html  update_debtor.html  update_employee.html  update_password.html
webpage/templatetags/: filters.py
webpage/tests/: factories.py  test_database.py  test_forms.py  test_models.py  test_templatetags_filters.py  utils.py
webpage/views/: auth.py  company.py  company_user.py  debt.py  debtor.py
